# hdf5_viewer_sextants

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  build.py  build_no_gpu.py  build_onefile.py  main.py  pyinstaller.py  requirements.txt  requirements_dev.txt  setup.cfg
.claude/: settings.local.json
.github/workflows/: ci.yaml
docs/: CREATING_TOOLS.md  EXPORT_COMPARISON.md  PYQTGRAPH_FEATURES.md  SUPPORTED_FORMATS.md
pages/content/: _index.md
src/: version.py
src/gui/: __init__.py  _shared.py  about_page.py  cdi_reconstruction_tool.py  data_calculator_enhanced.py  data_comparison.py  dataset_path_combo.py  frame_analysis_tool.py  fth_reconstruction_tool.py  image_view_2d_enhanced.py  main_window.py  plot_widget_1d_enhanced.py  q_calibration_tool.py  table_model.py  unified_data_viewer.py  xrms_analyze_tool.py
src/img/: __init__.py  img_path.py
src/lib_h5/: __init__.py  data_exporter.py  dataset_types.py  file_size.py  file_validator.py  recursive_iterator.py
src/logging_config/: __init__.py
src/recon/: __init__.py  cdi.py  curve_fit.py  fth.py  incidence.py  profiles.py
tests/: conftest.py  test_cdi_support_mask_alignment.py  test_data_calculator_fft.py  test_fth_smoke.py  test_image_auto_contrast.py  test_qcal_xrms_features.py  test_recon_cdi.py  test_recon_fth.py  test_recon_incidence.py  test_recon_xrms.py  test_regular_file_loader.py  test_scan_range_parser.py  test_xrms_combine.py
windows/: compile.iss
