[metadata]
name = hdf5-viewer-sextants
version = attr: src.version.__version__
description = HDF5 File Viewer with coherent X-ray imaging reconstruction tools (SEXTANTS edition)
author = Dennis Lönard
maintainer = GUO Zongxia
license = GPLv3
license_files = LICENSE
platforms = unix, linux, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11

[options]
packages = find_namespace:
install_requires =
    PyQt6>=6.7.0
    PyQt6-Qt6>=6.7.0
    h5py>=3.11.0
    numpy>=2.0.0
    pyqtgraph>=0.13.7
    natsort>=8.4.0
    Pillow>=10.0.0
    scipy>=1.13.0
python_requires = >=3.11
package_dir =
    = .
zip_safe = no

[options.packages.find]
include =
    src*

[options.extras_require]
testing =
    flake8>=6.0.0
    flake8-docstrings>=1.7.0
    mypy>=1.9.0

[flake8]
max-line-length = 120
exclude =
    .git
    build
    debian
    dist
    html
    img
    venv
    windows
    {envtempdir}
